user-setup (0.02) UNRELEASED; urgency=low

  * Fix clearing of encrypted user passwords from the debconf database.
  * Remove a few bits of dead code.
  * Exit with code 10 to back up to main menu, not 30.

 -- Colin Watson <cjwatson@debian.org>  Sun, 20 Nov 2005 22:05:34 +0000

user-setup (0.01) unstable; urgency=low

  [ Christian Perrier ]
  * First release as a udeb broken out from shadow (and base-config)
    and rewritten.

 -- Christian Perrier <bubulle@debian.org>  Sun, 13 Nov 2005 20:07:32 +0100