@@ -1,10 +1,12 @@
 user-setup (0.02) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Fix clearing of encrypted user passwords from the debconf database.
   * Remove a few bits of dead code.
   * Exit with code 10 to back up to main menu, not 30.
+  * Use a prebaseconfig script and prompt the user earlier
 
- -- Colin Watson <cjwatson@debian.org>  Sun, 20 Nov 2005 22:05:34 +0000
+ -- Christian Perrier <bubulle@debian.org>  Thu, 24 Nov 2005 23:40:00 +0100
 
 user-setup (0.01) unstable; urgency=low
 
